Fix game title and alignment of board games

--- a/src/Party/pages/Party.css
+++ b/src/Party/pages/Party.css
@@ -47,7 +47,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    align-items: center;
+    align-items: start;
     column-gap: 15px;
     row-gap: 20px;
     margin-top: 30px;
