--- a/src/collection/pages/Collection.css
+++ b/src/collection/pages/Collection.css
@@ -9,7 +9,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    align-items: center;
+    align-items: start;
     column-gap: 15px;
     row-gap: 20px;
     margin-top: 30px;
@@ -89,6 +89,15 @@ svg.svg-inline--fa.fa-arrow-down-a-z.fa-xl {
 
 .board-img {
     height: auto;
+    width: 100%;
+    grid-column: 1/4;
+    display: grid;
+    align-items: end;
+    border-radius: 10px;
+}
+
+.board-img-search {
+    height: 32vh;
     width: 100%;
     grid-column: 1/4;
     display: grid;
